grammar/tree-sitter-wxml/test/corpus/basic_elements.txt
==================
Basic elements
==================

<view class="container">
  <text>Hello World</text>
  <button>Click me</button>
</view>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value)))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))
