grammar/tree-sitter-wxml/test/corpus/include.txt
==================
Include
==================

<include src="../common/header.wxml" />

---

(document
  (include_statement
    (tag_name)
    (attribute
      (attribute_name)
      (quoted_attribute_value))))
