grammar/tree-sitter-wxml/test/corpus/list_rendering.txt
==================
List rendering
==================

<view wx:for="{{list}}" wx:key="id">
  <text>{{item.title}}</text>
</view>

---

(document
 (element
  (start_tag
   (tag_name)
   (attribute
    (attribute_name)
    (quoted_attribute_value
     (interpolation
      (expression))))
   (attribute
    (attribute_name)
    (quoted_attribute_value)))
  (element
   (start_tag
    (tag_name))
   (interpolation
    (expression))
   (end_tag
    (tag_name)))
  (end_tag
   (tag_name))))
