grammar/tree-sitter-wxml/test/corpus/self_closing_tags.txt
==================
Self-closing tags
==================

<image src="/path/to/image.png" />
<input type="text" placeholder="Enter text" />

---

(document
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value))))
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value))
      (attribute
        (attribute_name)
        (quoted_attribute_value)))))
