grammar/tree-sitter-wxml/test/corpus/template_definition.txt
==================
Template definition
==================

<template name="userCard">
  <view class="card">
    <text>{{name}}</text>
    <text>{{age}}</text>
  </view>
</template>

---

(document
  (template_definition
    (template_definition_start_tag
      (tag_name)
      (template_name_attribute
        (attribute_name)
        (quoted_attribute_value)))
    (element
      (start_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value)))
      (element
        (start_tag
          (tag_name))
        (interpolation
          (expression))
        (end_tag
          (tag_name)))
      (element
        (start_tag
          (tag_name))
        (interpolation
          (expression))
        (end_tag
          (tag_name)))
      (end_tag
        (tag_name)))
    (template_end_tag
      (tag_name))))
