grammar/tree-sitter-wxml/test/corpus/template_usage.txt
==================
Template usage
==================

<template is="userCard" data="{{...user}}" />
<template is="{{cond ? 'tplA' : 'tplB'}}" data="{{payload}}" />
<template is="layout" data="{{title: 'Main'}}">
  <text slot="header">Header</text>
  <text>Content</text>
</template>

---

(document
  (template_usage
    (template_usage_self_closing_tag
      (tag_name)
      (template_is_attribute
        (attribute_name)
        (quoted_attribute_value))
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (interpolation
            (expression))))))
  (template_usage
    (template_usage_self_closing_tag
      (tag_name)
      (template_is_attribute
        (attribute_name)
        (quoted_attribute_value
          (interpolation
            (expression))))
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (interpolation
            (expression))))))
  (template_usage
    (template_usage_start_tag
      (tag_name)
      (template_is_attribute
        (attribute_name)
        (quoted_attribute_value))
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (interpolation
            (expression)))))
    (element
      (start_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value)))
      (text)
      (end_tag
        (tag_name)))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (template_end_tag
      (tag_name))))
